0.9.8/project/entries/en/entry.md
---
title: What is Flextype?   
breadcrumbs:
  0:
    title: "Documentation"
    link: "[url]/en/"
  1:
    title: "Getting Started"
    link: "[url]/en/getting-started/"
txt:
  common:
    edit_this_page: Improve this page
    language: Language
    on_this_page: On this page
  categories:
    getting_started:
      title: Getting Started
      what_is_flextype: What is Flextype?
      requirements: Requirements
      installation: Installation
      configuration: Configuration
      folder_structure: Folder Structure
      php_constants: PHP Constants
      coc: Code of Conduct
      getting_help: Getting Help
      license: License
    concepts:
      title: Concepts
      entries: Entries
      plugins: Plugins
      parsers: Parsers
      serializers: Serializers
      content_apis: Content APIs
      perfomance: Performance
    api:
     title: API Reference
     delivery: Content Delivery API
     management: Content Management API
     images: Images API
     authentication: Authentication
     http_details: HTTP Details
     errors: Errors
    content:
      title: Content
      entries: Entries
      markdown: Markdown
      media: Media
      fieldsets: Fieldsets
      snippets: Snippets
      shortcodes: Shortcodes
    themes:
      title: Themes
      theme_installation: Theme Installation
      twig_filters_functions: Twig Filters & Functions
      theme_variables: Theme Variables
      theme_configuration: Theme Configuration
      entries_fetch: Entries Fetch
    plugins:
      title: Plugins
      configuration: Plugin Configuration
      event_hooks: "Event Hooks"
      toasts_notifications: Toast Notifications
      installation: Plugin Installation
      navigation: Navigation
    cookbook:
      title: Cookbook
      tutorials:
        title: Tutorials
        blog: Blog
        team_members: Team Members
      setup:
        title: Setup
      templating:
        title: Templating
    advanced:
      title: Advanced
      performance_and_caching: Performance & Caching
      password_recovery: Password recovery
      yaml_syntax: YAML Syntax
      api: Flextype API's
---

Flextype is an open-source self-hosted **Data-First Headless CMS & API**. It is was **founded in March 2018** as lightweight alternative to other heavy and outdated CMS. Many people use complex solutions for simple pages, unnecessarily. Building this content management system, we focused on simplicity - even novice webmaster adapt his template and writes his own plugin. To achieve this, we implemented a simple but powerful API's.

With Flextype, you are in complete control. Design your data structure the way you want. Update and share your data with others and teams using version control. Flextype does not require MySQL database, because all the data are collected in a simple files. Perfect portability when changing your hosting provider. Just copy all the files from one account to another.

The underlying architecture of Flextype is built using well established and best-in-class technologies. This is to ensure that Flextype is simple to use and easy to extend. Some of these key technologies include:

* [Slim PHP](http://www.slimframework.com): Framework for powerful web applications and APIs.
* [Doctrine Project](https://www.doctrine-project.org): A set of decoupled and reusable PHP libraries for powerful web applications.
* [The PHP League](https://thephpleague.com): The League of Extraordinary PHP Packages well tested and using modern coding standards.
* [Respect Validation](https://respect-validation.readthedocs.io/): The most awesome validation engine ever created for PHP.
* [Thunderer Shortcode](https://github.com/thunderer/Shortcode): Advanced shortcode (BBCode) parser and engine for PHP.
* [Markdown & Parsedown](https://github.com/erusev/parsedown): Easy content creation using Markdown Syntax.
* [YAML](https://yaml.org): Human friendly data serialization format for simple configuration.

### Supporting Flextype

Flextype is an open source project and community contributions are essential to its growing and success. Contributing to the Flextype is easy and you can give as little or as much time as you want.

##### Financial support FINANCIAL SUPPORT
Flextype is an MIT-licensed open source project and completely free to use.
However, the amount of effort needed to maintain and develop new features for the project is not sustainable without proper financial backing. <br><br> You can support it's ongoing development by being a project backer or a sponsor:<br>
<a href="https://www.patreon.com/awilum">Become a backer or sponsor on Patreon</a>,
<a href="//flextype.org/en/one-time-donation">One-time donation via PayPal, QIWI, Sberbank, Yandex</a>,
<a href="//flextype.org/en/sponsors">Visit our Sponsors & Backers page</a>

##### International translator team
We are on a mission to build high quality platform to develop fast, flexible, easier to manage websites with Flextype!<br><br>
If you wish to participate in the translation of Flextype, please Join Flextype International Translator Team and start translating!<br><br>
Our crowdin projects:<br>
<a href="https://crowdin.com/project/flextype-plugin-admin">Flextype Admin Panel Plugin</a>, <a href="https://crowdin.com/project/flextype-plugin-form-admin">Flextype Form Admin Plugin</a>, <a href="https://crowdin.com/project/flextype-plugin-themes-admin">Flextype Themes Admin Plugin</a>, <a href="https://crowdin.com/project/flextype-website">Flextype Website</a>, <a href="https://crowdin.com/project/flextype-documentation">Flextype Documentation</a>

### Flextype Press kit

You can find a summary about Flextype, including Flextype logos and press information, on our [press kit page.](https://flextype.org/en/press-kit)
